# 21

C-projects/C2_s21_stringplus/src/: Makefile  s21_insert.c  s21_memchr.c  s21_memcmp.c  s21_memcpy.c  s21_memmove.c  s21_memset.c  s21_sprintf.c  s21_sprintf.h  s21_sscanf.c  s21_sscanf.h  s21_strcat.c  s21_strchr.c  s21_strcmp.c  s21_strcpy.c  s21_strcspn.c  s21_strerror.c  s21_string.h  s21_strlen.c  s21_strncat.c  s21_strncmp.c  s21_strncpy.c  s21_strpbrk.c  s21_strrchr.c  s21_strspn.c  s21_strstr.c  s21_strtok.c  s21_to_lower.c  s21_to_upper.c  s21_trim.c
C-projects/C2_s21_stringplus/src/tests/: test_sprintf_f.c
C-projects/C3_SimpleBashUtils/src/cat/: Makefile  bytes.txt  cat_test.sh  cat_test_leak.sh  s21_cat.c
C-projects/C3_SimpleBashUtils/src/grep/: Makefile  chars.c  chars.h  grep.c  pattern.txt  s21_grep.c  s21_grep.h  test.c
C-projects/C5_s21_decimal/: .gitignore
C-projects/C5_s21_decimal/src/: Makefile  s21_add.c  s21_decimal.h  s21_div.c  s21_floor.c  s21_from_decimal_to_float.c  s21_from_decimal_to_int.c  s21_from_float_to_decimal.c  s21_from_float_to_decimal.h  s21_from_int_to_decimal.c  s21_helper.c  s21_helper.h  s21_is_equal.c  s21_is_greater.c  s21_is_greater_or_equal.c  s21_is_less.c  s21_is_less_or_equal.c  s21_is_not_equal.c  s21_mod.c  s21_mul.c  s21_negate.c  s21_round.c  s21_sub.c  s21_truncate.c
C-projects/C5_s21_decimal/src/doc/: DoxygenLayout.xml  README.md  s21_decimal_doxyfile
C-projects/C5_s21_decimal/src/tests/: test_add.c  test_div.c  test_floor.c  test_from_decimal_to_float.c  test_from_decimal_to_int.c  test_from_float_to_decimal.c  test_from_int_to_decimal.c  test_is_equal.c  test_is_greater.c  test_is_greater_or_equal.c  test_is_less.c  test_is_less_or_equal.c  test_is_not_equal.c  test_me.c  test_me.h  test_mod.c  test_mul.c  test_negate.c  test_round.c  test_sub.c  test_truncate.c
C-projects/C6_s21_matrix/src/: Makefile  s21_calc_complements.c  s21_create_matrix.c  s21_determinant.c  s21_eq_matrix.c  s21_helper.c  s21_inverse_matrix.c  s21_matrix.h  s21_mult_matrix.c  s21_mult_number.c  s21_remove_matrix.c  s21_sub_matrix.c  s21_sum_matrix.c  s21_transpose.c
C-projects/C6_s21_matrix/src/tests/: test_calc_complements.c  test_create_remove.c  test_determinant.c  test_eq_matrix.c  test_me.c  test_me.h  test_mult_matrix.c  test_mult_number.c  test_sub_matrix.c  test_sum_matrix.c  test_transpose.c
C-projects/C7_SmartCalc_v1.0/src/: Makefile
C-projects/C7_SmartCalc_v1.0/src/back/: calculation.c  calculation.h  deque.c  deque.h  lexema.c  lexema.h  operations.c  operations.h  stack.c  stack.h
C-projects/C7_SmartCalc_v1.0/src/doc/: DoxygenLayout.xml  README.md  smartcalc_doxyfile
C-projects/C7_SmartCalc_v1.0/src/front_qt/: CMakeLists.txt  CMakeLists.txt.user.774b228  calculator.cpp  graph.cpp  main.cpp  mainwindow.h  mainwindow.ui  window_connection.cpp
C-projects/C8_3DViewer_v1.0/src/: Makefile
C-projects/C8_3DViewer_v1.0/src/back/: shape.c  shape.h
C-projects/C8_3DViewer_v1.0/src/doc/: 3D_Viewer_doxyfile  DoxygenLayout.xml  README.md  doxygen-awesome.css
C-projects/C8_3DViewer_v1.0/src/front_qt/: CMakeLists.txt  main.cpp  opengl.cpp  opengl.h  window.cpp  window.h  window.ui
C-projects/C8_3DViewer_v1.0/src/front_qt/QtGifImage/: CMakeLists.txt
C-projects/C8_3DViewer_v1.0/src/front_qt/QtGifImage/giflib/: CMakeLists.txt  qgifimage.cpp
CPP-projects/CPP1_s21_matrixplus/src/: Dockerfile  Makefile  s21_matrix_oop.cc  s21_matrix_oop.h
CPP-projects/CPP1_s21_matrixplus/src/tests/: test_assigment.cc  test_calc_ans_inv.cc  test_cons.cc  test_det.cc  test_equal.cc  test_main.cc  test_main.h  test_mul.cc  test_setter.cc  test_sub.cc  test_sum.cc  test_transpose.cc
SQL-projects/SQL_beginner.Day00/src/ex02/: day00_ex02.sql
SQL-projects/SQL_beginner.Day00/src/ex04/: day00_ex04.sql
SQL-projects/SQL_beginner.Day00/src/ex05/: day00_ex05.sql
SQL-projects/SQL_beginner.Day00/src/ex06/: day00_ex06.sql
SQL-projects/SQL_beginner.Day00/src/ex07/: day00_ex07.sql
SQL-projects/SQL_beginner.Day00/src/ex09/: day00_ex09.sql
SQL-projects/SQL_beginner.Day01/src/ex00/: day01_ex00.sql
SQL-projects/SQL_beginner.Day01/src/ex01/: day01_ex01.sql
SQL-projects/SQL_beginner.Day01/src/ex02/: day01_ex02.sql
SQL-projects/SQL_beginner.Day01/src/ex03/: day01_ex03.sql
SQL-projects/SQL_beginner.Day01/src/ex04/: day01_ex04.sql
SQL-projects/SQL_beginner.Day01/src/ex05/: day01_ex05.sql
SQL-projects/SQL_beginner.Day01/src/ex06/: day01_ex06.sql
SQL-projects/SQL_beginner.Day01/src/ex07/: day01_ex07.sql
SQL-projects/SQL_beginner.Day01/src/ex08/: day01_ex08.sql
SQL-projects/SQL_beginner.Day01/src/ex09/: day01_ex09.sql
SQL-projects/SQL_beginner.Day01/src/ex10/: day01_ex10.sql
SQL-projects/SQL_beginner.Day02/src/ex00/: day02_ex00.sql
SQL-projects/SQL_beginner.Day02/src/ex01/: day02_ex01.sql
SQL-projects/SQL_beginner.Day02/src/ex02/: day02_ex02.sql
SQL-projects/SQL_beginner.Day02/src/ex03/: day02_ex03.sql
SQL-projects/SQL_beginner.Day02/src/ex04/: day02_ex04.sql
SQL-projects/SQL_beginner.Day02/src/ex05/: day02_ex05.sql
SQL-projects/SQL_beginner.Day02/src/ex06/: day02_ex06.sql
SQL-projects/SQL_beginner.Day02/src/ex07/: day02_ex07.sql
SQL-projects/SQL_beginner.Day02/src/ex08/: day02_ex08.sql
SQL-projects/SQL_beginner.Day02/src/ex09/: day02_ex09.sql
(+70 files in other folders)
